# ps3100-sim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
analysis/: ac_analysis.py  cv_law.py  derive_tf.py  render_schemdraw.py
dsp/: balance_am.dsp  ensemble.dsp  filterctl.dsp  freqctl.dsp  gate.dsp  geg.dsp  instrument.dsp  instrument_poly.dsp  mg1_noise.dsp  modvca.dsp  panelctl.dsp  poly.dsp  relctl.dsp  resonator.dsp  sh.dsp  siggen.dsp  trigger.dsp  vactrol.dsp  vca.dsp  vp.dsp  wavectl.dsp
netlists/: klm62-cv.cir  klm62-resonator.cir  klm62d-balance-am.cir  klm62d-freqctl.cir  klm62d-relctl.cir  klm63-filterctl.cir  klm63-mg1-noise.cir  klm63-modvca-mg2.cir  klm63-wavectl.cir  klm64-siggen.cir  klm69-gate.cir  klm76-ensemble.cir  klm76-geg.cir  klm76-sh.cir  klm76-trigger.cir  klm76-vca.cir  klm76-vp.cir
netlists/models/: vactrol.lib
plugin/: CMakeLists.txt  FaustGlue.h  PluginProcessor.cpp  PluginProcessor.h
tests/: impulse_driver.cpp  test_balance_am_dsp.py  test_balance_am_spice.py  test_cv_law.py  test_dsp_vs_spice.py  test_ensemble_dsp.py  test_ensemble_spice.py  test_filterctl_dsp.py  test_filterctl_spice.py  test_freqctl_dsp.py  test_freqctl_spice.py  test_gate_dsp.py  test_gate_spice.py  test_geg_dsp.py  test_geg_spice.py  test_instrument.py  test_mg1_noise_dsp.py  test_mg1_noise_spice.py  test_modvca_dsp.py  test_modvca_spice.py  test_poly.py  test_relctl_dsp.py  test_relctl_spice.py  test_sh_dsp.py  test_sh_spice.py  test_siggen_dsp.py  test_siggen_spice.py  test_spice_bands.py  test_trigger_dsp.py  test_trigger_spice.py  test_vactrol.py  test_vca_dsp.py  test_vca_spice.py  test_vp_dsp.py  test_vp_spice.py  test_wavectl_dsp.py  test_wavectl_spice.py
web/: README.md  boards.json  index.html
web/balance/: app.js  index.html
web/ensemble/: app.js  index.html
web/gate/: app.js  index.html
web/geg/: app.js  index.html
web/instrument/: app.js  index.html
web/lib/: faust-loader.js  panel.css  panel.js  scope.js
web/lib/faustwasm/: index.d.ts  index.js.map
web/mg1noise/: app.js  index.html
web/modvca/: app.js  index.html
web/panel/: app.js  index.html  layout.js  panel.css  params.js
web/poly/: app.js  index.html
web/resonator/: app.js  index.html  selftest.html  spice-curves.json
web/sh/: app.js  index.html
web/siggen/: app.js  index.html
web/test/: browser-smoke.mjs  node-selftest.mjs  package-lock.json  package.json
web/tools/: extract-spice-curves.py  serve.mjs
web/vca/: app.js  index.html
web/voice/: app.js  index.html
web/vp/: app.js  index.html
